--- a/less/index.less
+++ b/less/index.less
@@ -23,6 +23,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	font-family: Lato;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -58,3 +59,6 @@ html, body {
 }
 
 /* my code */
+@light-grey: #eaeaea;
+@green: #26c6da;
+
