--- a/less/index.less
+++ b/less/index.less
@@ -60,7 +60,8 @@ html, body {
 
 /* my code */
 @light-grey: #f9fafc;
-@green: rgba(38, 198, 218, .5);
+@dark-grey: rgb(90,90,90);
+@green: rgba(38, 198, 218, .3);
 @shadow: 0 3px 35px rgba(0,0,0,.1);
 
 .flex(@justify, @align) {
@@ -76,7 +77,9 @@ html, body {
 .container {
 	height: 100vh;
 	background: fade(@light-grey, 60%);
+	font-size: 62.5%;
 	.flex(center, center);
+
 	.card {
 		background: white;
 		margin: 0 auto;
@@ -85,6 +88,22 @@ html, body {
 		border: 1px solid @green;
 		border-radius: 10px;
 		box-shadow: @shadow;
+		padding: 3%;
+
+		header {
+			height: 60px;
+			.flex(space-between, flex-start);
+			.flex-column();
+		}
+
+		h1 {
+			font-size: 2rem;
+		}
+		
+		h2 {
+			font-size: 1.25rem;
+			color: @dark-grey;
+		}
 	}
 }
 
