--- a/less/index.less
+++ b/less/index.less
@@ -84,26 +84,46 @@ html, body {
 		background: white;
 		margin: 0 auto;
 		height: 700px;
-		width: 700px;
+		width: 600px;
+		max-width: 95%;
 		border: 1px solid @green;
 		border-radius: 10px;
 		box-shadow: @shadow;
-		padding: 3%;
+		overflow: hidden;
 
-		header {
-			height: 60px;
-			.flex(space-between, flex-start);
-			.flex-column();
+		.media {
+			width: 100%;
+			height: 50%;
+			background: @dark-grey;
 		}
 
-		h1 {
-			font-size: 2rem;
+		.content {
+			padding: 5%;
+
+			.header {
+				height: 60px;
+				.flex(space-between, flex-start);
+				.flex-column();
+			}
+
+			.text {
+				
+			}
+	
+			h1 {
+				font-size: 2rem;
+			}
+			
+			h2 {
+				font-size: 1.25rem;
+				color: @dark-grey;
+			}
+
+			p {
+				font-size: 1rem;
+			}
 		}
 		
-		h2 {
-			font-size: 1.25rem;
-			color: @dark-grey;
-		}
 	}
 }
 
