add content section to card

--- a/less/index.less
+++ b/less/index.less
@@ -71,6 +71,7 @@ html, body {
 }
 
 .flex-column() {
+	display: flex;
 	flex-direction: column;
 }
 
@@ -99,6 +100,7 @@ html, body {
 
 		.content {
 			padding: 5%;
+			.flex-column();
 
 			.header {
 				height: 60px;
@@ -107,7 +109,7 @@ html, body {
 			}
 
 			.text {
-				
+				padding: 3% 0;
 			}
 	
 			h1 {
@@ -121,6 +123,7 @@ html, body {
 
 			p {
 				font-size: 1rem;
+				line-height: 1.3;
 			}
 		}
 		
