--- a/less/index.less
+++ b/less/index.less
@@ -61,7 +61,7 @@ html, body {
 /* my code */
 @light-grey: #f9fafc;
 @dark-grey: rgb(90,90,90);
-@green: rgba(38, 198, 218, .3);
+@green: rgba(38, 198, 218, 1);
 @shadow: 0 3px 35px rgba(0,0,0,.1);
 
 .flex(@justify, @align) {
@@ -99,7 +99,10 @@ html, body {
 		}
 
 		.content {
+			position: relative;
 			padding: 5%;
+			height: 50%;
+			.flex(space-between, flex-start);
 			.flex-column();
 
 			.header {
@@ -110,6 +113,11 @@ html, body {
 
 			.text {
 				padding: 3% 0;
+			}
+
+			.actions {
+				height: 40px;
+				width: 100%;
 			}
 	
 			h1 {
@@ -124,6 +132,19 @@ html, body {
 			p {
 				font-size: 1rem;
 				line-height: 1.3;
+			}
+
+			button {
+				font-size: 1rem;
+				background: @green;
+				width: 150px;
+				height: 40px;
+				color: white;
+				border: none;
+				border-radius: 5px;
+				&:hover {
+					cursor: pointer;
+				}
 			}
 		}
 		
