--- a/less/index.less
+++ b/less/index.less
@@ -62,7 +62,9 @@ html, body {
 @light-grey: #f9fafc;
 @dark-grey: rgb(90,90,90);
 @green: rgba(38, 198, 218, 1);
-@shadow: 0 3px 35px rgba(0,0,0,.1);
+@shadow: 0 3px 35px rgba(0,0,0,.2);
+@button-shadow: 0 3px 10px rgba(0,0,0,.2);
+@button-shadow-hover: 0 3px 10px rgba(0,0,0,.3);
 
 .flex(@justify, @align) {
 	display: flex;
@@ -84,35 +86,38 @@ html, body {
 	.card {
 		background: white;
 		margin: 0 auto;
-		height: 700px;
-		width: 600px;
+		height: 720px;
+		width: 550px;
 		max-width: 95%;
-		border: 1px solid @green;
-		border-radius: 10px;
 		box-shadow: @shadow;
 		overflow: hidden;
 
 		.media {
 			width: 100%;
-			height: 50%;
+			height: 45%;
 			background: @dark-grey;
+			background: url("https://ichef.bbci.co.uk/news/660/cpsprodpb/3BE2/production/_105103351_boyle_getty.jpg");
+			background-size: cover;
+			background-position: center;
 		}
 
 		.content {
 			position: relative;
 			padding: 5%;
-			height: 50%;
+			height: 55%;
 			.flex(space-between, flex-start);
 			.flex-column();
 
 			.header {
 				height: 60px;
+				width: 100%;
 				.flex(space-between, flex-start);
 				.flex-column();
 			}
 
 			.text {
-				padding: 3% 0;
+				.flex(flex-start, flex-start);
+				.flex-column();
 			}
 
 			.actions {
@@ -129,9 +134,20 @@ html, body {
 				color: @dark-grey;
 			}
 
-			p {
+			h3 {
+				font-size: 1.1rem;
+				margin: 1rem 0;
+				color: @dark-grey;
+			}
+
+			p, li {
 				font-size: 1rem;
-				line-height: 1.3;
+				line-height: 1.4;
+			}
+
+			ul {
+				list-style-type: circle;
+				list-style-position: inside;
 			}
 
 			button {
@@ -142,8 +158,10 @@ html, body {
 				color: white;
 				border: none;
 				border-radius: 5px;
+				box-shadow: @button-shadow;
 				&:hover {
 					cursor: pointer;
+					box-shadow: @button-shadow-hover;
 				}
 			}
 		}
