--- a/less/index.less
+++ b/less/index.less
@@ -59,6 +59,7 @@ html, body {
 }
 
 /* my code */
+@fixed-width: 550px;
 @light-grey: #f9fafc;
 @dark-grey: rgb(90,90,90);
 @green: rgba(38, 198, 218, 1);
@@ -81,18 +82,38 @@ html, body {
 	height: 100vh;
 	background: fade(@light-grey, 60%);
 	font-size: 62.5%;
-	.flex(center, center);
+	.flex(flex-start, center);
+	.flex-column();
+
+	.header {
+		width: @fixed-width;
+		max-width: 95%;
+		height: 50px;
+		margin-bottom: 10px;
+		.flex(center, center);
+
+		.menu {
+			width: 100%;
+			.flex(space-between, center);
+		}
+		
+		.menu-item {
+			font-size: 1rem;
+			text-decoration: none;
+			color: @dark-grey;
+		}
+	}
 
 	.card {
 		background: white;
 		margin: 0 auto;
 		height: 720px;
-		width: 550px;
+		width: @fixed-width;
 		max-width: 95%;
 		box-shadow: @shadow;
 		overflow: hidden;
 
-		.media {
+		.card-media {
 			width: 100%;
 			height: 45%;
 			background: @dark-grey;
@@ -101,26 +122,26 @@ html, body {
 			background-position: center;
 		}
 
-		.content {
+		.card-content {
 			position: relative;
 			padding: 5%;
 			height: 55%;
 			.flex(space-between, flex-start);
 			.flex-column();
 
-			.header {
+			.card-header {
 				height: 60px;
 				width: 100%;
 				.flex(space-between, flex-start);
 				.flex-column();
 			}
 
-			.text {
+			.card-text {
 				.flex(flex-start, flex-start);
 				.flex-column();
 			}
 
-			.actions {
+			.card-actions {
 				height: 40px;
 				width: 100%;
 			}
