--- a/less/index.less
+++ b/less/index.less
@@ -81,7 +81,7 @@ html, body {
 .container {
 	height: 100vh;
 	background: fade(@light-grey, 60%);
-	font-size: 62.5%;
+	font-size: 50%;
 	.flex(flex-start, center);
 	.flex-column();
 
@@ -89,7 +89,7 @@ html, body {
 		width: @fixed-width;
 		max-width: 95%;
 		height: 50px;
-		margin-bottom: 10px;
+		margin-bottom: 5px;
 		.flex(center, center);
 
 		.menu {
@@ -137,6 +137,7 @@ html, body {
 			}
 
 			.card-text {
+				width: 100%;
 				.flex(flex-start, flex-start);
 				.flex-column();
 			}
