--- a/less/index.less
+++ b/less/index.less
@@ -20,7 +20,7 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
+	font-size: 100%%;
 	font: inherit;
 	vertical-align: baseline;
 	font-family: Lato;
@@ -59,10 +59,21 @@ html, body {
 }
 
 /* my code */
-@fixed-width: 550px;
+@font-stack: Lato, Arial;
+@font-size: 62.5%;
+@font-very-large: 3rem;
+@font-large: 2.2rem;
+@font-medium: 1.8rem;
+@font-small: 1.4rem;
+
+@fixed-width: 450px;
+@fixed-height: 600px;
+
 @light-grey: #f9fafc;
 @dark-grey: rgb(90,90,90);
 @green: rgba(38, 198, 218, 1);
+@black: #202124;
+
 @shadow: 0 3px 35px rgba(0,0,0,.2);
 @button-shadow: 0 3px 10px rgba(0,0,0,.2);
 @button-shadow-hover: 0 3px 10px rgba(0,0,0,.3);
@@ -78,36 +89,44 @@ html, body {
 	flex-direction: column;
 }
 
+html {
+	font-size: @font-size;
+	font-family: @font-stack;
+}
+
 .container {
 	height: 100vh;
 	background: fade(@light-grey, 60%);
-	font-size: 50%;
-	.flex(flex-start, center);
+	.flex(center, center);
 	.flex-column();
 
 	.header {
-		width: @fixed-width;
-		max-width: 95%;
-		height: 50px;
+		position: absolute;
+		background: #202124;
+		box-shadow: @shadow;
+		top: 0;
+		width: 100%;
+		height: 60px;
 		margin-bottom: 5px;
 		.flex(center, center);
 
 		.menu {
-			width: 100%;
+			width: @fixed-width;
+			max-width: 95%;
 			.flex(space-between, center);
 		}
 		
 		.menu-item {
-			font-size: 1rem;
+			font-size: @font-medium;
 			text-decoration: none;
-			color: @dark-grey;
+			color: #fff;
 		}
 	}
 
 	.card {
 		background: white;
 		margin: 0 auto;
-		height: 720px;
+		height: @fixed-height;
 		width: @fixed-width;
 		max-width: 95%;
 		box-shadow: @shadow;
@@ -148,22 +167,22 @@ html, body {
 			}
 	
 			h1 {
-				font-size: 2rem;
+				font-size: @font-very-large;
 			}
 			
 			h2 {
-				font-size: 1.25rem;
+				font-size: @font-large;
 				color: @dark-grey;
 			}
 
 			h3 {
-				font-size: 1.1rem;
+				font-size: @font-medium;
 				margin: 1rem 0;
 				color: @dark-grey;
 			}
 
 			p, li {
-				font-size: 1rem;
+				font-size: @font-small;
 				line-height: 1.4;
 			}
 
@@ -173,7 +192,7 @@ html, body {
 			}
 
 			button {
-				font-size: 1rem;
+				font-size: @font-small;
 				background: @green;
 				width: 150px;
 				height: 40px;
