--- a/less/index.less
+++ b/less/index.less
@@ -205,7 +205,9 @@ html {
       .flex(center, center);
       font-size: @font-medium;
       text-decoration: none;
-      color: #ddd;
+	  color: #ddd;
+	  border-bottom: 4px transparent solid;
+	  transition: all 500ms;
       &.active {
         color: #fff;
         border-bottom: 4px white solid;
@@ -226,7 +228,11 @@ html {
     overflow: hidden;
 	position: relative;
 	
-	div {
+	&.contact {
+		max-height: 850px;
+	}
+
+	div, form {
 		width: 100%;
 	}
 
@@ -312,7 +318,40 @@ html {
         &:active {
           box-shadow: none;
         } // -- active
-      } // -- button
+	  } // -- button
+	  
+	  //contact-page-specific
+	  .card-contact-form {
+		  padding: 3% 0;
+		  width: 100%;
+		  height: 300px;
+		  text-align: left;
+		  .flex(space-around, center);
+		  .flex-column();
+		  label {
+			  width: 60%;
+			  font-size: @font-medium;
+			  color: @green;
+		  }
+		  input {
+			  border: 1px @dark-grey solid;
+			  border-radius: 3px;
+			  height: 45px;
+			  width: 60%;
+			  padding: 0 3%;
+			  transition: all 500ms;
+			  &:active, &:focus {
+				  outline: none;
+				  border: 1px @green solid;
+				  background: @light-grey;
+			  }
+		  }
+
+		  @media (max-width: 500px) {
+			  input { width: 100%; }
+			  label { width: 100%; }
+		  }
+	  }
     } // card-content
   } // // -- card
 } // -- container
