--- a/less/index.less
+++ b/less/index.less
@@ -192,7 +192,7 @@ html {
     box-shadow: @dark-shadow;
     top: 0;
     width: 100%;
-    height: 60px;
+	height: 60px;
     .flex(center, center);
 
     .menu {
@@ -202,11 +202,13 @@ html {
     } // -- header
 
     .menu-item {
-      height: 60px;
+	  height: 60px;
+	  width: 100px;
       .flex(center, center);
       font-size: @font-medium;
       text-decoration: none;
-      color: #ddd;
+	  color: #ddd;
+	  border-top: 4px transparent solid;
       border-bottom: 4px transparent solid;
       transition: all 500ms;
       &.active {
