add placeholders to form

--- a/less/index.less
+++ b/less/index.less
@@ -361,7 +361,8 @@ html {
           height: 45px;
           width: 60%;
           padding: 0 3%;
-          transition: all 500ms;
+		  transition: all 500ms;
+		  font-size: @font-small;
           &:active,
           &:focus {
             outline: none;
